@@ -9,7 +9,7 @@
 % In:
 %     url  the url to read
 %     webread_options  same options set to webread_options
-%     max_retries  the number of retries before failure
+%     max_retries  the number of tries before failure
 %
 % Example Usage:
 %
@@ -17,17 +17,20 @@
 %                                     'Timeout', 60), 5)
 %
 % Created by Joakim Möller 2017-06-19
+% Bugfix and better error reporting by Joakim Möller 2017-09-07
 
 function web_request = webread_retry(source_url, webread_options, max_retries)
     min_pause = 3;
     max_pause = 60;
     wait_seconds = min_pause + rand(1, max_retries) * (max_pause - min_pause);
-    for idx = numel(wait_seconds)
+    for secs = wait_seconds
         try
             web_request = webread(source_url, webread_options);
             return
-        catch
-            pause(wait_seconds(idx));
+        catch errmsg
+            disp(errmsg.message);
+            disp(sprintf('Retrying %s in %0.0fs', source_url, secs));
+            pause(secs);
         end
     end
     disp(sprintf('Failed to get data from %s', source_url))
